--- a/Conjugate/Base.lproj/Main.storyboard
+++ b/Conjugate/Base.lproj/Main.storyboard
@@ -89,29 +89,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rn4-Ak-wKk">
-                                <rect key="frame" x="16" y="114" width="343" height="52"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Try &quot;trank&quot; or &quot;hast&quot; or ..." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="57O-L4-ZgX" customClass="FlexLanguageTextField">
-                                        <rect key="frame" x="11" y="2" width="321" height="48"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                        <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="no" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
-                                        <connections>
-                                            <outlet property="delegate" destination="fFr-0S-btg" id="a5u-EE-MC2"/>
-                                        </connections>
-                                    </textField>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="52" id="8l7-tX-2hI"/>
-                                    <constraint firstItem="57O-L4-ZgX" firstAttribute="top" secondItem="Rn4-Ak-wKk" secondAttribute="top" constant="2" id="9Te-tG-SLX"/>
-                                    <constraint firstItem="57O-L4-ZgX" firstAttribute="leading" secondItem="Rn4-Ak-wKk" secondAttribute="leading" constant="11" id="JN9-ER-Phd"/>
-                                    <constraint firstAttribute="bottom" secondItem="57O-L4-ZgX" secondAttribute="bottom" constant="2" id="f8R-eh-qM6"/>
-                                    <constraint firstAttribute="trailing" secondItem="57O-L4-ZgX" secondAttribute="trailing" constant="11" id="tgz-Pg-clQ"/>
-                                </constraints>
-                            </view>
                             <containerView opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hq5-Ud-WJK">
                                 <rect key="frame" x="0.0" y="174" width="375" height="493"/>
                                 <connections>
@@ -152,6 +129,29 @@
                                         <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rn4-Ak-wKk">
+                                <rect key="frame" x="16" y="114" width="343" height="52"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Try &quot;trank&quot; or &quot;hast&quot; or ..." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="57O-L4-ZgX" customClass="FlexLanguageTextField">
+                                        <rect key="frame" x="11" y="2" width="321" height="48"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <color key="textColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="no" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="fFr-0S-btg" id="a5u-EE-MC2"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="8l7-tX-2hI"/>
+                                    <constraint firstItem="57O-L4-ZgX" firstAttribute="top" secondItem="Rn4-Ak-wKk" secondAttribute="top" constant="2" id="9Te-tG-SLX"/>
+                                    <constraint firstItem="57O-L4-ZgX" firstAttribute="leading" secondItem="Rn4-Ak-wKk" secondAttribute="leading" constant="11" id="JN9-ER-Phd"/>
+                                    <constraint firstAttribute="bottom" secondItem="57O-L4-ZgX" secondAttribute="bottom" constant="2" id="f8R-eh-qM6"/>
+                                    <constraint firstAttribute="trailing" secondItem="57O-L4-ZgX" secondAttribute="trailing" constant="11" id="tgz-Pg-clQ"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
@@ -318,7 +318,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yUY-00-Wcc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2936.8000000000002" y="-304.4977511244378"/>
+            <point key="canvasLocation" x="2964" y="0.0"/>
         </scene>
         <!--Saved Verbs View Controller-->
         <scene sceneID="wg7-f3-ORb">
@@ -481,7 +481,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7BH-BE-jil" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3847" y="-593"/>
+            <point key="canvasLocation" x="3865" y="-99"/>
         </scene>
         <!--Tabbed Content View Controller-->
         <scene sceneID="vNg-AL-jz1">
@@ -499,7 +499,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XnU-lW-tNa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3846" y="-188"/>
+            <point key="canvasLocation" x="3866" y="218"/>
         </scene>
         <!--Second-->
         <scene sceneID="8bt-L9-D5D">
@@ -536,11 +536,18 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="berlin_skyline" translatesAutoresizingMaskIntoConstraints="NO" id="8YK-8v-Fdi">
+                                <rect key="frame" x="0.0" y="490" width="375" height="128"/>
+                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="oMT-s4-fhG"/>
+                                </constraints>
+                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K9H-P6-0k7">
-                                <rect key="frame" x="20" y="568" width="335" height="30"/>
+                                <rect key="frame" x="20" y="422" width="335" height="48"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="H6c-Ii-sba"/>
+                                    <constraint firstAttribute="height" constant="48" id="H6c-Ii-sba"/>
                                 </constraints>
                                 <attributedString key="attributedText">
                                     <fragment content="Footer">
@@ -560,11 +567,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="8YK-8v-Fdi" firstAttribute="leading" secondItem="mT7-8U-owa" secondAttribute="leading" id="1g9-rY-G3x"/>
                             <constraint firstItem="xyg-Wa-c0Y" firstAttribute="top" secondItem="mT7-8U-owa" secondAttribute="top" id="406-pg-gcx"/>
                             <constraint firstItem="xyg-Wa-c0Y" firstAttribute="leading" secondItem="mT7-8U-owa" secondAttribute="leading" id="96Z-jb-Iba"/>
                             <constraint firstAttribute="trailing" secondItem="xyg-Wa-c0Y" secondAttribute="trailing" id="BOU-Si-k40"/>
-                            <constraint firstItem="qHy-kc-YY3" firstAttribute="top" secondItem="K9H-P6-0k7" secondAttribute="bottom" constant="20" id="Feg-6K-ZQx"/>
+                            <constraint firstItem="qHy-kc-YY3" firstAttribute="top" secondItem="8YK-8v-Fdi" secondAttribute="bottom" id="C7C-Ij-SNS"/>
                             <constraint firstItem="qHy-kc-YY3" firstAttribute="top" secondItem="xyg-Wa-c0Y" secondAttribute="bottom" id="iL4-2E-dsQ"/>
+                            <constraint firstItem="8YK-8v-Fdi" firstAttribute="top" secondItem="K9H-P6-0k7" secondAttribute="bottom" constant="20" id="kMD-pQ-c8m"/>
+                            <constraint firstAttribute="trailing" secondItem="8YK-8v-Fdi" secondAttribute="trailing" id="kVC-LI-Ztf"/>
                             <constraint firstAttribute="trailing" secondItem="K9H-P6-0k7" secondAttribute="trailing" constant="20" id="sWk-nV-x0c"/>
                             <constraint firstItem="K9H-P6-0k7" firstAttribute="leading" secondItem="mT7-8U-owa" secondAttribute="leading" constant="20" id="tEL-15-Ryv"/>
                         </constraints>
@@ -581,6 +591,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="berlin_skyline" width="687" height="259"/>
         <image name="conjugate_tab" width="30" height="30"/>
         <image name="de_flag" width="300" height="300"/>
         <image name="first" width="30" height="30"/>
