--- a/Conjugate/Base.lproj/Main.storyboard
+++ b/Conjugate/Base.lproj/Main.storyboard
@@ -485,11 +485,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="w5j-hp-nId">
-                                    <rect key="frame" x="0.0" y="128.5" width="375" height="216"/>
+                                    <rect key="frame" x="0.0" y="183.5" width="375" height="216"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="berlin_skyline" translatesAutoresizingMaskIntoConstraints="NO" id="8YK-8v-Fdi">
-                                            <rect key="frame" x="0.0" y="88" width="375" height="128"/>
+                                            <rect key="frame" x="0.0" y="138" width="375" height="128"/>
                                             <color key="tintColor" red="0.81258264137673253" green="0.81258264137673253" blue="0.81258264137673253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="128" id="yfe-mz-jkH"/>
@@ -519,7 +519,7 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="8YK-8v-Fdi" secondAttribute="bottom" id="1zI-nS-TfK"/>
+                                        <constraint firstAttribute="bottom" secondItem="8YK-8v-Fdi" secondAttribute="bottom" constant="-50" id="1zI-nS-TfK"/>
                                         <constraint firstAttribute="trailing" secondItem="8YK-8v-Fdi" secondAttribute="trailing" id="AEQ-i8-1IW"/>
                                         <constraint firstItem="K9H-P6-0k7" firstAttribute="leading" secondItem="w5j-hp-nId" secondAttribute="leading" constant="40" id="Put-3I-3mU"/>
                                         <constraint firstItem="K9H-P6-0k7" firstAttribute="top" secondItem="w5j-hp-nId" secondAttribute="top" constant="20" id="WLo-zq-bXv"/>
@@ -528,7 +528,7 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsCell" rowHeight="55" id="gFJ-Ik-gOr" customClass="SettingsCell" customModule="Conjugate" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsOptionCell" rowHeight="55" id="gFJ-Ik-gOr" customClass="SettingsOptionCell" customModule="Conjugate" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="55.5" width="375" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gFJ-Ik-gOr" id="ia4-hZ-zvS">
@@ -560,6 +560,54 @@
                                         <connections>
                                             <outlet property="leftImageView" destination="wtT-f0-7hW" id="uOR-35-RDi"/>
                                             <outlet property="titleLabel" destination="7Vz-NU-pBq" id="h8M-az-f68"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsLanguageCell" rowHeight="55" id="gED-oD-QV9" customClass="SettingsLanguageCell" customModule="Conjugate" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="110.5" width="375" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gED-oD-QV9" id="KuG-I5-xJO">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conjugation Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lci-uR-FkO">
+                                                    <rect key="frame" x="13" y="0.0" width="292" height="55"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="de_flag" translatesAutoresizingMaskIntoConstraints="NO" id="ckq-di-Z6g">
+                                                    <rect key="frame" x="318.5" y="16" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="DV7-4a-1C5"/>
+                                                        <constraint firstAttribute="width" constant="22" id="Ufw-7M-KSt"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5r-xS-7V4">
+                                                    <rect key="frame" x="348.5" y="16" width="18.5" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="18.5" id="lcE-af-F7F"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Lci-uR-FkO" firstAttribute="top" secondItem="KuG-I5-xJO" secondAttribute="top" id="DY7-qG-AaL"/>
+                                                <constraint firstItem="v5r-xS-7V4" firstAttribute="leading" secondItem="ckq-di-Z6g" secondAttribute="trailing" constant="8" id="GjH-Ko-uX7"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="v5r-xS-7V4" secondAttribute="bottom" constant="9" id="NeH-ry-lAS"/>
+                                                <constraint firstItem="ckq-di-Z6g" firstAttribute="leading" secondItem="Lci-uR-FkO" secondAttribute="trailing" constant="13.5" id="OC7-gf-6cq"/>
+                                                <constraint firstItem="v5r-xS-7V4" firstAttribute="top" secondItem="KuG-I5-xJO" secondAttribute="topMargin" constant="8" id="VvR-Ps-Gya"/>
+                                                <constraint firstAttribute="bottom" secondItem="Lci-uR-FkO" secondAttribute="bottom" id="aSK-3F-4Ji"/>
+                                                <constraint firstItem="Lci-uR-FkO" firstAttribute="leading" secondItem="KuG-I5-xJO" secondAttribute="leading" constant="13" id="lz1-hM-YkT"/>
+                                                <constraint firstItem="v5r-xS-7V4" firstAttribute="trailing" secondItem="KuG-I5-xJO" secondAttribute="trailingMargin" id="mMF-op-DlE"/>
+                                                <constraint firstItem="ckq-di-Z6g" firstAttribute="centerY" secondItem="KuG-I5-xJO" secondAttribute="centerY" id="x2j-gM-nZr"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="languageImageView" destination="ckq-di-Z6g" id="vET-K4-ZyK"/>
+                                            <outlet property="languageLabel" destination="v5r-xS-7V4" id="GYN-ez-jFM"/>
+                                            <outlet property="titleLabel" destination="Lci-uR-FkO" id="eYK-XR-WhX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
